--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,18 @@
+# Кеші Python
 __pycache__/
 *.pyc
-.env
-*.log
-*.db
-*.sqlite3
-.env.*
-.envrc
+
+# Системні та IDE-файли
+.DS_Store
 .idea/
 .vscode/
-.DS_Store
+
+# Секрети та змінні середовища
+.env
+.env.*
+
+# Тимчасові PDF-и
 garantiyny_talon.pdf
-stock.csv
+
+# Логи
+*.log
