--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,5 @@
-import logging
-from aiogram import Bot, Dispatcher, types
-from aiogram.types import ReplyKeyboardMarkup, KeyboardButton
-from aiogram.utils import executor
-from data_loader import search_model, get_usd_rate
-
-API_TOKEN = "8097292310:AAGsi0tjJZoR43JI_kc7tGv6Tp2qz2iQeWQ"
-
-logging.basicConfig(level=logging.INFO)
-bot = Bot(token=API_TOKEN)
-dp = Dispatcher(bot)
-
-# Популярные модели
-popular_models = [
-    "12", "12 Pro Max", "13", "13 Pro", "13 Pro Max",
-    "14", "14 Pro", "14 Pro Max", "15", "15 Pro",
-    "15 Pro Max", "16", "16 Pro", "16 Pro Max"
-]
-
-# Клавиатура
-popular_keyboard = ReplyKeyboardMarkup(resize_keyboard=True)
-for i in range(0, len(popular_models), 2):
-    row = popular_models[i:i+2]
-    popular_keyboard.row(*(KeyboardButton(m) for m in row))
-
-@dp.message_handler(commands=['start'])
-async def start_cmd(message: types.Message):
-    await message.answer("🔍 Напиши модель (наприклад: 12 Pro Max)", reply_markup=popular_keyboard)
-
-@dp.message_handler(commands=['rate'])
-async def usd_rate_cmd(message: types.Message):
-    rate = get_usd_rate()
-    await message.answer(f"💱 Поточний курс долара: {rate} грн")
-
-@dp.message_handler()
-async def search(message: types.Message):
-    query = message.text.strip()
-    results = search_model(query)
-
-    if not results:
-        await message.answer("❌ Нічого не знайдено.")
-        return
-
-    await message.answer(f"🔎 Знайдено моделей: {len(results)}")
-
-    for item in results:
-        serials = item['Серийные номера']
-        text = (
-            f"📱 <b>{item['Наименование']}</b>\n"
-            f"🔢 Серійний: {serials}\n"
-            f"💵 Ціна: {item['Розничная']} $\n"
-            f"🇺🇦 В гривні: {item['Ціна в грн']} грн"
-        )
-        await message.answer(text, parse_mode="HTML")
-
-if __name__ == "__main__":
-    executor.start_polling(dp, skip_updates=True)
+aiogram==2.25.1
+pandas
+requests
+reportlab
+PyPDF2
